feat: add canceling tasks by user